load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


http_archive(
    name = "com_github_libsdl",
    strip_prefix = "SDL2-2.26.2",
    urls = ["https://github.com/libsdl-org/SDL/releases/download/release-2.26.2/SDL2-2.26.2.tar.gz"],
    sha256 = "95d39bc3de037fbdfa722623737340648de4f180a601b0afad27645d150b99e0",
    build_file = "sdl.BUILD",
)
